--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,4 +59,4 @@ jobs:
         aws-region: ap-northeast-2
       
     - name: Upload to S#
-      run: aws s3 cp --region ap-northeast-2 ./$PROJECT_NAME.zip s3://$S#_BUCKET_NAME/$PROJECT_NAME/$PROEJCT_NAME.zip #(14)
+      run: aws s3 cp --region ap-northeast-2 ./$PROJECT_NAME.zip s3://$S3_BUCKET_NAME/$PROJECT_NAME/$PROEJCT_NAME.zip #(14)
